# yatc

./: .gitignore  CMakeLists.txt  README.md
libyatc/: CMakeLists.txt
libyatc/include/yatc/: board.h  cooldown_timer.h  coordinate.h  direction.h  piece.h  rotation.h  shape.h  tetrimino.h  tetrimino_factory.h  uniform_tetrimino_factory.h  yatc_error.h
libyatc/include/yatc/tetriminos/: tetrimino_base.h  tetrimino_i.h  tetrimino_j.h  tetrimino_l.h  tetrimino_o.h  tetrimino_s.h  tetrimino_t.h  tetrimino_z.h  tetriminos.h
libyatc/src/: board.cpp  cooldown_timer.cpp  coordinate.cpp  piece.cpp  tetrimino.cpp  uniform_tetrimino_factory.cpp
libyatc/src/tetriminos/: tetrimino_base.cpp  tetrimino_i.cpp  tetrimino_j.cpp  tetrimino_l.cpp  tetrimino_o.cpp  tetrimino_s.cpp  tetrimino_t.cpp  tetrimino_z.cpp
libyatc/tests/: CMakeLists.txt  board.cpp  cooldown_timer.cpp  coordinate.cpp  piece.cpp  tetrimino.cpp  uniform_tetrimino_factory.cpp
libyatc/tests/tetriminos/: CMakeLists.txt  tetrimino_base.cpp  tetrimino_i.cpp  tetrimino_j.cpp  tetrimino_l.cpp  tetrimino_o.cpp  tetrimino_s.cpp  tetrimino_t.cpp  tetrimino_z.cpp
yatc/: CMakeLists.txt  main.cpp
